--- a/README
+++ b/README
@@ -2,3 +2,7 @@ This is a toy program I made to simulate a pokemon battle.
 
 It is very stupid, there are many features that are not implemented, but still if you do not do anything strange (like digiting numbers outside the one suggested) it works pretty well, so that I can say that I am pretty satisfied with that.
 To compile it, it suffices to use the Makefile (digit make) in src/ directory.
+
+It contains also a database directory where there are all pokemon datas in a format useful to be read from the functions of the program; one can put them in the main.cxx. There is also the script I made to create the database, using as a source a popular pokemon site.
+
+The code is documented with Doxygen comments, so you can extract a Doxygen documentation out of it.
